# opengl_tiny_renderer

./: .clang-format  .clang-tidy  .clangd  .gitignore  CMakeLists.txt  Dependencies.cmake  IMPROVEMENTS.md  README.md
.zed/: debug.json
App/: CMakeLists.txt  imgui.ini
App/Shaders/: fragment.glsl  vertex.glsl
App/Source/: AppLayer.cpp  AppLayer.h  Application.cpp  Application.h  GLError.h  IndexBuffer.cpp  Main.cpp  Texture.cpp  Texture.h  VertexArray.cpp  VertexBuffer.cpp  VertexBufferLayout.h  Window.cpp  Window.h
Core/: CMakeLists.txt
Core/Source/: Application.cpp  Application.h  Camera.cpp  Camera.h  GLError.h  IndexBuffer.cpp  IndexBuffer.h  Layer.cpp  Layer.h  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  VertexArray.cpp  VertexArray.h  VertexBuffer.cpp  VertexBuffer.h  VertexBufferLayout.h  Window.cpp  Window.h
Core/Source/Core/: Application.cpp  Application.h
Core/Source/Events/: Event.h  InputEvents.h  WindowEvents.h
Core/Source/Vertices/: VertexArray.cpp  VertexArray.h
docs/: vao-vbo-shader-connections.md
include/glad/: glad.c  glad.h
res/shaders/: Basic.shader
shaders/: fragment.glsl  vertex.glsl
src/: Application.cpp  Application.h  Camera.cpp  Camera.h  IndexBuffer.h  Main.cpp  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h  VertexArray.cpp  VertexArray.h  VertexBuffer.cpp  VertexBuffer.h  VertexBufferLayout.h  main.cpp  shader.cpp  shader.h
